// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`retrieving the constructed model from a nested field structure 1`] = `
User {
  "email": "someone@example.com",
  "pet": Pet {
    "age": 7,
  },
}
`;

exports[`updating with a nested field structure 1`] = `
User {
  "email": "someone@example.com",
  "name": "someone",
  "pet": Pet {
    "age": 7,
    "name": "Bonkers",
    "type": "dog",
  },
}
`;

exports[`with an array in the structure 1`] = `
<UserListForm>
  <div>
    <ul />
    <input
      id="email"
      onChange={[Function]}
      value=""
    />
    <input
      id="name"
      onChange={[Function]}
      value=""
    />
    <button
      onClick={[Function]}
    >
      Add user to list
    </button>
  </div>
</UserListForm>
`;

exports[`with an array in the structure 2`] = `
<UserListForm>
  <div>
    <ul>
      <li
        key="someone@example.com"
      >
        someone
         (
        someone@example.com
        )
      </li>
    </ul>
    <input
      id="email"
      onChange={[Function]}
      value="someone@example.com"
    />
    <input
      id="name"
      onChange={[Function]}
      value="someone"
    />
    <button
      onClick={[Function]}
    >
      Add user to list
    </button>
  </div>
</UserListForm>
`;

exports[`works as expected throughout a journey 1`] = `
<UserForm>
  <div>
    <input
      onChange={[Function]}
      value=""
    />
    <p>
      Please type something!
    </p>
  </div>
</UserForm>
`;

exports[`works as expected throughout a journey 2`] = `
<UserForm>
  <div>
    <input
      onChange={[Function]}
      value="someone"
    />
    <p>
      Loading...
    </p>
  </div>
</UserForm>
`;

exports[`works as expected throughout a journey 3`] = `
<UserForm>
  <div>
    <input
      onChange={[Function]}
      value="someone"
    />
    <p>
      Invalid!
    </p>
  </div>
</UserForm>
`;

exports[`works as expected throughout a journey 4`] = `
<UserForm>
  <div>
    <input
      onChange={[Function]}
      value="someone@example.com"
    />
    <p>
      Loading...
    </p>
  </div>
</UserForm>
`;

exports[`works as expected throughout a journey 5`] = `
<UserForm>
  <div>
    <input
      onChange={[Function]}
      value="someone@example.com"
    />
    <p>
      Valid!
    </p>
  </div>
</UserForm>
`;
